[workspace]
members = [".", "changes"]

[package]
name = "whoshome"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
early = "0.1.0"
home = "0.5.4"
netrc-rs = "0.1.2"
reqwest = { version = "0.11.12", features = ["blocking", "json", "cookies"] }
serde = { version = "1.0.146", features = ["derive"] }
serde_dhall = "0.12.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
changes = { path = "changes" }
